--- a/template/style.css
+++ b/template/style.css
@@ -7,7 +7,11 @@
 article { 
     padding: 25px 0; 
     line-height: 150%; 
-    text-align: left; 
+    text-align: center; 
+}
+
+img {
+    width: 100%;
 }
 
 nav .item {
